# OpusFile

./: .gitignore  .gitmodules  CMakeLists.txt
include/: opusfile.h
